--- a/src/main/resources/webfiles/form.html
+++ b/src/main/resources/webfiles/form.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<body style="background-color:#FFE1E9;">
+</body>
+
+
+<table width="400" height="100" align="centre" cellpadding="0" cellspacing="100">
+        <tr>
+            <td style="line-height: 10px"></td>
+            <td bgcolor="#C70039" style="line-height: 10px"></td>
+            <td style="line-height: 10px"></td>
+        </tr>
+        <tr>
+            <td bgcolor="#C70039"></td>
+            <td bgcolor="#C70039">
+
+                <font color="#FFFFFF"><b>Czesc! Co dzis zjemy na obiad?</b></font>
 <body>
 <form action="/jedzenie">
     <input name="skladniki">
@@ -13,4 +25,16 @@
 
 </form>
 </body>
+
+</td>
+<td bgcolor="#C70039"></td>
+</tr>
+<tr>
+    <td style="line-height: 10px"></td>
+    <td bgcolor="#C70039" style="line-height: 10px"></td>
+    <td style="line-height: 10px"></td>
+</tr>
+</table>
+</head>
+
 </html>
